<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding = "16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:hint="@string/cost_of_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/costOfService"
            android:inputType = "numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/service_question"
        style="@style/Widget.TipTime.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="12dp"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField" />

    <RadioGroup
        android:id="@+id/tipOptions"
        android:layout_width="146dp"
        android:layout_height="158dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@id/tip_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_question">

        <RadioButton
            android:id="@+id/tip_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_1" />

        <RadioButton
            android:id="@+id/tip_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_2" />

        <RadioButton
            android:id="@+id/tip_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_3" />

    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/roundQuestion"
        style="@style/Widget.TipTime.TextView"
        android:layout_width="252dp"
        android:layout_height="31dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/round_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipOptions"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/calcbutton"
        android:layout_width="283dp"
        android:layout_height="53dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:text="@string/calculate_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundQuestion" />

    <TextView
        android:id="@+id/tipResult"
        style="@style/Widget.TipTime.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        tools:text="Tip Amount: $10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcbutton" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toStartOf="@+id/textField"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_money" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/service_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_service" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="295dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/calcbutton"
        app:layout_constraintEnd_toStartOf="@+id/roundQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round_up" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>